Created rating and product components and applied data on react app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 #root{
   height: 100%;
-}
+}      
 
 /* Layout */
 .grid-container {
@@ -102,4 +102,7 @@ img.medium {
 .rating span {
   color: #f0c040;
   margin: 0.1rem;
+}
+.rating span:last-child{
+  color:#404040;
 }
